2010-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c: Remove magic number -3 and the test (foo>=-2) in
	favor of LT_NODRAW and test (foo!=LT_NODRAW).

2010-07-11  Peter Juhasz  <juhaszp@users.sourceforge.net>
            Ethan A Merritt  <merritt@u.washington.edu>

	* src/util3d.c (draw3d_point_unconditional):  Remove incomplete local
	color handling; the shared code in term_apply_lp_properties now does a
	more complete job.

	* src/graph3d.c (do_3dplot): Simplify the key sample code for contour
	plots with style "points".  Set a default color sequence for contours
	belonging to a surface drawn with "lc variable".

2010-07-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot): Fix bug introduced by patch of 23-Mar-2010.
	If the linetype of a 3D surface used "lc ..." then all contours of the
	surface were stuck with that same coloring rather than incrementing
	through successive line types.

2010-07-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (term_apply_lp_properties): Yet another bandaid fix for
	problems with "lc var".  If the higher level code has failed to resolve
	LC_COLORFROMCOLUMN (or LT_DEFAULT) into an actual color, use LT_BLACK.
	Bug #3026477

2010-07-08  Ingo Thies  <ingo.thies@gmx.de>

	* src/gadgets.h src/mouse.c src/set.c:  Allow continuous rotation of 3D
	plots when mousing; i.e., do not limit rotation angle to 0<rotx<180

2010-07-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse): The coloring option "lc N" should not set a
	use_palette flag.  I think the option "lc variable" shouldn't either.
	Bug #3026477

2010-07-07  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c src/gadgets.c src/gadgets.h src/gp_types.h
	src/graph3d.c src/graphics.c src/graphics.h src/plot2d.c src/save.c
	src/set.c src/show.c src/tables.c src/tables.h src/unset.c:

	* docs/gnuplot.doc docs/plotstyles.gnu demo/all.dem demo/ellipses.dat