@@ -3,12 +3,14 @@ New features, changes and fixes since gnuplot version 4.4
 
 * NEW time formats can handle fractional seconds (microsecond precision)
 * NEW hidden3d supports "with impulses"
+* NEW hidden3d supports arrow style parameters for "with vectors"
 * NEW user-definable linetypes
 * NEW plot style "with boxplot"
 * NEW plot style "with circles" allows start/end angles for each arc
 * NEW plot style "with ellipses"
 * NEW qt terminal driver 
 * NEW variable (per-data point) color for additional plot styles
+* FIX length estimation of UTF-8 strings
 * CHANGE remove vestigial code supporting Amiga, Apollo, and 16-bit MSDOS/WIN
 * CHANGE 3D impulses are now always drawn from z=0
 * CHANGE do not limit 3D rotation to 0<rotx<180
